gccida/c0/lookup_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_expr/src/gcse.c:3130:26: error: use of undeclared identifier 'machine_mode'
hash = hash_expr( pat, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)pat), &do_not_record_p, expr_hash_table_size); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_expr/src/gcse.c:3130:41: error: expected expression
hash = hash_expr( pat, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)pat), &do_not_record_p, expr_hash_table_size); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_expr/src/gcse.c:3133:20: error: expected identifier or '('
for (  struct expr = expr_hash_table[hash]; ;  struct expr = expr->next_same_hash ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_expr/src/gcse.c:3133:48: error: expected expression
for (  struct expr = expr_hash_table[hash]; ;  struct expr = expr->next_same_hash ) 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_expr/src/gcse.c:3136:7: error: expected expression
if (  struct expr ) 
      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lookup_expr/src/obj/gcse.o] Error 1
